prepare release line
